...
        <!-- Title & Close Button Row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSheetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:text="@string/add_habit_title"
                android:textAppearance="@style/TextAppearance.Spark.HeadlineLg"
...
